# sdk-android

./: .gitignore  .gitlab-ci.yml  README.md  build.gradle  build.gradle.kts  gradle.properties  pyproject.toml  run-ci.py  settings.gradle  settings.gradle.kts  setup.py  tbump.toml
tanker-bindings/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts  native.gradle  proguard-rules.pro
tanker-bindings/conan/: conanfile-deployed.txt  conanfile-local.txt  conanfile.in.txt  conanfile.txt
tanker-bindings/gradle/wrapper/: gradle-wrapper.properties
tanker-bindings/src/androidTest/java/io/tanker/api/: TankerTest.java
tanker-bindings/src/androidTest/kotlin/io/tanker/api/: Datastore.kt  EncryptionSession.kt  Groups.kt  OIDC.kt  Setup.kt  Tanker.kt  TankerFuture.kt  TankerInputStream.kt  TankerResourceChannel.kt  TankerSpec.kt  Unlock.kt  Utils.kt
tanker-bindings/src/main/: AndroidManifest.xml
tanker-bindings/src/main/cpp/: detect_kvm_generic.cpp  detect_kvm_x86.asm  onload.cpp
tanker-bindings/src/main/java/io/tanker/api/: TankerCallback.java  TankerCallbackWithKeepAlive.kt  TankerDeviceCreatedHandler.java  TankerDeviceInfo.kt  TankerDeviceRevokedHandler.java  TankerSessionClosedHandler.java  TankerUnlockRequiredHandler.java  TankerUnwrapCallback.java  TankerValidationHandler.java  TankerVoidCallback.java
tanker-bindings/src/main/java/io/tanker/utils/: Base64.java
tanker-bindings/src/main/kotlin/io/tanker/admin/: Admin.kt  AdminLib.kt  TankerApp.kt  TankerAppUpdateOptions.kt
tanker-bindings/src/main/kotlin/io/tanker/api/: Admin.kt  AsynchronousByteChannelWrapper.kt  AttachResult.kt  ChunkEncryptor.kt  DeviceInfo.kt  EncryptOptions.kt  EncryptionOptions.kt  EncryptionSession.kt  ErrorCode.kt  HttpClient.kt  Identity.kt  InputStreamWrapper.kt  LogHandlerCallback.kt  LogRecord.kt  Padding.kt  Password.kt  ProguardKeep.java  ShareOptions.kt  SharingOptions.kt  Status.kt  Tanker.kt  TankerAdmin.kt  TankerAsynchronousByteChannel.kt  TankerAsynchronousByteChannelWrapper.kt  TankerAuthenticationMethods.kt  TankerChannels.kt  TankerCompletionHandler.kt  TankerConnection.kt  TankerDecryptOptions.kt  TankerEncryptOptions.kt  TankerException.kt  TankerFuture.kt  TankerFutureException.kt  TankerInputStream.kt  TankerLogRecord.kt  TankerOptions.kt  TankerPendingReadException.kt  TankerReadPendingException.kt  TankerResourceChannel.kt  (+16 more)
(+49 files in other folders)
