[tool.poetry]
name = "sdk-android"
version = "0.1.0"
description = "Android bindings for the Tanker SDK"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = { version = ">= 2022.2.4054", source = "gitlab" }

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.dev-dependencies]
# linters
black = "^19.3b0"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"

