[tool.poetry]
name = "sdk-android"
version = "0.1.0"
description = "Android bindings for the Tanker SDK"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.7"
tankerci = { version = ">= 2022.6.4294", source = "gitlab" }

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
flake8-docstrings = "^1.5.0"
mypy = "0.942"
isort = "5.10.1"

