[tool.poetry]
name = "sdk-android"
version = "0.1.0"
description = "Android bindings for the Tanker SDK"
authors = ["Tanker team <tech@tanker.io>"]

[tool.poetry.dependencies]
python = "^3.11"

tankerci = { version = "== 2024.2.5107", source = "gitlab" }

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
flake8-comprehensions = "3.10.0"
flake8-docstrings = "1.6.0"
isort = "5.10.1"
mypy = "0.961"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "gitlab"
url = "https://gitlab.com/api/v4/projects/20917546/packages/pypi/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
